--- a/public/info/home/styles.css
+++ b/public/info/home/styles.css
@@ -233,6 +233,7 @@ canvas {
     background-color: rgb(0, 0, 0, 0.3);
     backdrop-filter: blur(10px);
     border-radius: 25px;
+    margin: auto auto;
     z-index: 1;
 }
 
