--- a/public/info/home/styles.css
+++ b/public/info/home/styles.css
@@ -30,6 +30,7 @@
 body {
     background: rgb(16,47,149);
     background: radial-gradient(circle, rgba(16,47,149,1) 0%, rgba(9,9,121,1) 0%, rgba(241,143,255,1) 28%, rgba(14,38,142,1) 78%, rgba(43,190,255,1) 100%);
+    justify-content: center;
     font-family: var(--text-body);
 }
 
